# tgforwardbot

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  channels.py  login.py  logs.py  messages.py  rules.py  status.py  websocket.py
backend/app/core/: config.py  database.py  events.py  log_buffer.py  security.py
backend/app/models/: __init__.py  message.py
backend/app/schemas/: auth.py  message.py  rule.py
backend/app/telegram/: client.py  fast_transfer.py  forwarder.py  handlers.py  syncer.py
backend/docs/changelog/: 20260218-fastapi-layer.md
docs/changelog/: 20260218-000000.md  20260218-002337.md  20260218-004153.md  20260218-010000.md  20260218-010500.md  20260218-020000.md  20260218-030000.md  20260218-040000.md  20260219-010000.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  SearchableSelect.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Account.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Messages.tsx  Rules.tsx
frontend/src/styles/: index.css
