[project]
name = "tgforwardbot"
version = "0.1.0"
description = "Telegram channel message forwarder"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "cryptg>=0.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "redis>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "PyJWT>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
